--- a/terraform/tf.cfg
+++ b/terraform/tf.cfg
@@ -4,9 +4,9 @@
 # NOTE: For consistencty, use single-quotes '' for values
 
 # AWS CLI Config
-AWS_PROFILE='aiai'
+AWS_PROFILE='tacotruffles'
 AWS_REGION='us-east-1'
 
 # Helps Terraform name things and make AWS assets human-readable
-PREFIX='aiai'
+PREFIX='taco'
 STAGES='["stage","prod"]'
